[tool.poetry]
name = "last_war"
version = "0.1.0"
description = ""
authors = ["jack <jack>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.5"
uvicorn = "^0.35.0"
fastapi = "^0.116.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
